--- a/style.css
+++ b/style.css
@@ -19,20 +19,23 @@ html,body{
 }
 nav{
     width: 100%;
+    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
     gap: 20px;
     position: fixed;
-    z-index: 9999;    
+    z-index: 9999;  
+    background-color: black;  
 }
 ul{
     display: flex;
     gap: 20px;
+    scale: 1.25;
 }
 ul>a{
-    font-size: 40px;
+    font-size: 30px;
     gap: 20px; 
     color: white;
     text-decoration: none;
@@ -42,8 +45,9 @@ ul>a{
 }
 ul>a:hover{
     color: blue;
-    scale: 1.2;
+    scale: 1.75;
 }
+
 #btn{
     height: 100px;
     width: 100px;
